--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,15 @@
+click==8.1.6
+colorama==0.4.6
+docx==0.2.4
+docx2txt==0.8
 Flask==2.2.5
+importlib-metadata==6.7.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+lxml==4.9.3
+MarkupSafe==2.1.3
+Pillow==9.5.0
 python-docx==0.8.11
+typing-extensions==4.7.1
+Werkzeug==2.2.3
+zipp==3.15.0
